duicontrolpanel (0.8.16~unreleased) unstable; urgency=low

  * Little compile fix for meego 1.1
  * Fixes: NB#195911 - controlpanel crashing if its called via servicefw
    with invalid parameter
  * Adds support for popping up categorypage through servicefw

 -- Robert Manner <robert.manner@blumsoft.eu>  Mon, 04 Oct 2010 16:48:39 +0200

duicontrolpanel (0.8.15.1) unstable; urgency=low

  * Little compile fix for new Qt

 -- Robert Manner <robert.manner@blumsoft.eu>  Wed, 29 Sep 2010 11:44:42 +0200

duicontrolpanel (0.8.15) unstable; urgency=low

  * disables Most Used Category at compile time by default (DUI-3920)
  * Fixes: NB#194199 -  modification of libmeegocontrolpanel-doc
    installation method
  * Fixes: NB#193715 -  duicontrolpanel-soundsettingsapplet has no aegis
    manifest
  * Fixes: NB#193806 -  Not able to set Date and time zone for device

 -- Robert Manner <robert.manner@blumsoft.eu>  Tue, 28 Sep 2010 13:27:34 +0200

duicontrolpanel (0.8.14) unstable; urgency=low

  * Fixes: NB#192485 - Settings app view switches back from applet view
    to main view when we try to open the settings app once again
  * Fixes: NB#192478 - Activate Offline mode button is shown in all views of
    control panel applets in a given scenario

 -- Robert Manner <robert.manner@blumsoft.eu>  Tue, 21 Sep 2010 10:24:07 +0200

duicontrolpanel (0.8.13) unstable; urgency=low

  * Changes: delayed widget creation at applet list makes it possible to create long
    applet lists
  * Fixes: DcpContentItem could not be clicked until the applet got loaded
  * Fixes: NB#189265 - Tapping Settings button in status menu does not
    open settings view
  * Changes: Adds tracker::TrackerReadAccess credential
  * Fixes: NB#191373 -  Source package 'duicontrolpanel' interfaces not
    frozen in 0.2010.36-5
  * Workarounds: 188565 -  Offline mode button is left aligned...
  * Fixes: NB#192086 - Glitch in applet name when returning from an
    applet
