@@ -4,8 +4,10 @@ duicontrolpanel (0.8.16~unreleased) unstable; urgency=low
   * Fixes: NB#195911 - controlpanel crashing if its called via servicefw
     with invalid parameter
   * Adds support for popping up categorypage through servicefw
+  * Fixes: Popping up a button type applet through servicefw, moves to
+    the categorypage (the applet has no view)
 
- -- Robert Manner <robert.manner@blumsoft.eu>  Mon, 04 Oct 2010 16:48:39 +0200
+ -- Robert Manner <robert.manner@blumsoft.eu>  Tue, 05 Oct 2010 10:35:10 +0200
 
 duicontrolpanel (0.8.15.1) unstable; urgency=low
 
